# nbv_evaluation

./: CMakeLists.txt  package.xml
launch/: extract_gt.launch
src/: extract_gt.cpp  parse_world.py
