<?xml version="1.0"?>
<package>
	<name>evaluation</name>
	<version>0.0.1</version>
	<description>The package for viewpoint planning evaluation.</description>

	<maintainer email="hfreeman@andrew.cmu.edu">Harry Freeman</maintainer>

    <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>eigen_conversions</build_depend>
	<build_depend>message_generation</build_depend>
    <build_depend>custom_msgs</build_depend>
    

    <run_depend>roscpp</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>custom_msgs</run_depend>

	<export> </export>
</package>